--- a/src/main/resources/filter/dev/application.properties
+++ b/src/main/resources/filter/dev/application.properties
@@ -33,7 +33,7 @@ path.nfs=/usr/local/include
 feign.httpclient.enabled=true
 
 #redis配置
-spring.redis.database=0
+#spring.redis.database=0
 # server host1 单机使用，对应服务器ip
 #spring.redis.host=127.0.0.1
 # server password 密码，如果没有设置可不配
@@ -41,18 +41,18 @@ spring.redis.database=0
 #connection port  单机使用，对应端口号
 #spring.redis.port=6379
 # pool settings ...池配置
-spring.redis.pool.max-idle=20
-spring.redis.pool.min-idle=1
-spring.redis.pool.max-active=20
-spring.redis.pool.max-wait=-1
+#spring.redis.pool.max-idle=20
+#spring.redis.pool.min-idle=1
+#spring.redis.pool.max-active=20
+#spring.redis.pool.max-wait=-1
 # name of Redis server  哨兵监听的Redis server的名称
-spring.redis.sentinel.master=mymaster
+#spring.redis.sentinel.master=mymaster
 # comma-separated list of host:port pairs  哨兵的配置列表
-spring.redis.sentinel.nodes=192.168.3.206:26379,192.168.3.207:26379,192.168.3.208:26379
+#spring.redis.sentinel.nodes=192.168.3.206:26379,192.168.3.207:26379,192.168.3.208:26379
 ##use rabbitmq
-spring.sleuth.sampler.percentage=1.0
-spring.rabbitmq.host=192.168.3.18
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=admin
-spring.rabbitmq.password=123.com
-spring.rabbitmq.virtualHost=/
+#spring.sleuth.sampler.percentage=1.0
+#spring.rabbitmq.host=192.168.3.18
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=admin
+#spring.rabbitmq.password=123.com
+#spring.rabbitmq.virtualHost=/
