--- a/src/main/resources/filter/dev/bootstrap.yml
+++ b/src/main/resources/filter/dev/bootstrap.yml
@@ -34,7 +34,7 @@ eureka:
       enable: true
     registryFetchIntervalSeconds: 30
     serviceUrl:
-      defaultZone: http://192.168.0.119:8761/eureka/
+      defaultZone: http://peer1:8761/eureka/,http://peer2:8762/eureka/
 #      defaultZone: http://localhost:11100/eureka/
   instance:
     lease-expiration-duration-in-seconds: 90
