--- a/src/main/resources/filter/dev/application.properties
+++ b/src/main/resources/filter/dev/application.properties
@@ -1,7 +1,7 @@
 #spring.application.name=qcdq_user_server
 #server.port=12100
 #eureka.client.serviceUrl.defaultZone=http://192.168.3.59:11100/eureka/
-eureka.instance.metadata-map.cluster=quwb-wx-shop-fang
+eureka.instance.metadata-map.cluster=wx-mp-business
 spring.aop.auto=true
 pic.url=http://www.test.com
 
