--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,7 @@
 	</profiles>
 
 	<build>
+		<finalName>business</finalName>
 		<resources>
 			<resource>
 				<directory>src/main/resources/filter/${env}</directory>
@@ -225,6 +226,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-
 </project>
