--- a/src/main/resources/filter/prod/application.properties
+++ b/src/main/resources/filter/prod/application.properties
@@ -1,6 +1,7 @@
 #spring.application.name=qcdq_user_server
 #server.port=12100
-eureka.instance.metadata-map.cluster=qcdq-web-m-price
+#eureka.client.serviceUrl.defaultZone=http://192.168.3.59:11100/eureka/
+eureka.instance.metadata-map.cluster=wx-mp-business
 spring.aop.auto=true
 pic.url=http://www.test.com
 
@@ -12,7 +13,7 @@ spring.velocity.prefix=/
 spring.velocity.suffix=.vm
 spring.velocity.toolbox-config-location=/toolbox.xml
 #logging.level.org.apache.velocity=DEBUG
-spring.velocity.properties.userdirective=com.quwb.web.config.velocity.CarConfigVelocity
+#spring.velocity.properties.userdirective=com.quwb.web.config.velocity.CarConfigVelocity
 hystrix.command.default.execution.timeout.enabled=false
 #Hystrix\u652F\u6301\uFF0C\u5982\u679C\u4E3Atrue\uFF0Chystrix\u5E93\u5FC5\u987B\u5728classpath\u4E2D
 feign.hystrix.enabled=false
@@ -31,9 +32,8 @@ hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=2000
 path.nfs=/usr/local/include
 feign.httpclient.enabled=true
 
-
 #redis配置
-spring.redis.database=0
+#spring.redis.database=0
 # server host1 单机使用，对应服务器ip
 #spring.redis.host=127.0.0.1
 # server password 密码，如果没有设置可不配
@@ -41,18 +41,18 @@ spring.redis.database=0
 #connection port  单机使用，对应端口号
 #spring.redis.port=6379
 # pool settings ...池配置
-spring.redis.pool.max-idle=20
-spring.redis.pool.min-idle=1
-spring.redis.pool.max-active=20
-spring.redis.pool.max-wait=-1
+#spring.redis.pool.max-idle=20
+#spring.redis.pool.min-idle=1
+#spring.redis.pool.max-active=20
+#spring.redis.pool.max-wait=-1
 # name of Redis server  哨兵监听的Redis server的名称
-spring.redis.sentinel.master=mymaster
+#spring.redis.sentinel.master=mymaster
 # comma-separated list of host:port pairs  哨兵的配置列表
-spring.redis.sentinel.nodes=192.168.105.106:26379,192.168.105.107:26379,192.168.105.108:26379
+#spring.redis.sentinel.nodes=192.168.3.206:26379,192.168.3.207:26379,192.168.3.208:26379
 ##use rabbitmq
-spring.sleuth.sampler.percentage=1.0
-spring.rabbitmq.host=192.168.105.112
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=admin
-spring.rabbitmq.password=123.com
-spring.rabbitmq.virtualHost=/
+#spring.sleuth.sampler.percentage=1.0
+#spring.rabbitmq.host=192.168.3.18
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=admin
+#spring.rabbitmq.password=123.com
+#spring.rabbitmq.virtualHost=/
