--- a/src/main/resources/filter/prod/bootstrap.yml
+++ b/src/main/resources/filter/prod/bootstrap.yml
@@ -1,42 +1,9 @@
 spring:
   application:
-    name: qcdq-web-m-price
-#  cloud:
-#    config:
-#      profile: dev
-#      label: dev
-#      uri: http://localhost:11200/
-  datasource:
-    name: test
-    url: jdbc:mysql://192.168.104.2:3306/news?characterEncoding=utf8&useSSL=false
-    username: java_read
-    password: BlQc5Nlm&UwsOg#r
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.jdbc.Driver
-    filters: stat
-    maxActive: 20
-    initialSize: 1
-    maxWait: 60000
-    minIdle: 1
-    timeBetweenEvictionRunsMillis: 60000
-    minEvictableIdleTimeMillis: 300000
-    validationQuery: select 'x'
-    testWhileIdle: true
-    testOnBorrow: false
-    testOnReturn: false
-    poolPreparedStatements: true
-    maxOpenPreparedStatements: 20
-
-#  redis:
-#      sentinel:
-#        master: mymaster
-#        nodes: 192.168.105.106:26379,192.168.105.107:26379,192.168.105.108:26379
-
-
-
+    name: wx-mp-business
 
 server:
-  port: 8094
+  port: 8080
   session-timeout : 1000000 #用户回话session过期时间，以秒为单位
   tomcat:
     #context-path: /xycar
@@ -47,22 +14,6 @@ server:
 endpoints.shutdown:
   enabled: true
   sensitive: false
-mybatis:
-    type-aliases-package: com.quwb.web.entity
-    mapper-locations: classpath:mapper/**.xml
-
-mapper:
-  mappers:
-    -com.quwb.web.repository.mysql.dao.BaseDao
-  not-empty: false
-  identity: MYSQL
-
-pagehelper:
-  helperDialect: mysql
-  reasonable: true
-  supportMethodsArguments: true
-  params: count=countSql
-
 
 management:
   health:
@@ -76,12 +27,6 @@ management:
       enabled: false
     mail:
       enabled: false
-    mongo:
-      enabled: false
-    rabbit:
-      enabled: false
-    redis:
-      enabled: false
   add-application-context-header: false
 eureka:
   client:
@@ -89,9 +34,13 @@ eureka:
       enable: true
     registryFetchIntervalSeconds: 30
     serviceUrl:
-      defaultZone: http://192.168.105.133:11100/eureka/,http://192.168.105.173:11100/eureka/,http://192.168.105.213:11100/eureka/
-#      defaultZone: http://192.168.105.133:11100/eureka/,http://192.168.105.173:11100/eureka/,http://192.168.105.117:11100/eureka/
+      defaultZone: http://peer1:8761/eureka/,http://peer2:8762/eureka/
+
   instance:
     lease-expiration-duration-in-seconds: 90
     leaseRenewalIntervalInSeconds: 30
-    preferIpAddress: true
+    prefer-ip-address: true
+weixin:
+  appid: wx2b43d0e8d64222a8
+  appsecret: f3dfcdcd992c72151c0398bf5d453031
+  token: wenbin528
