--- a/src/main/resources/filter/dev/application.properties
+++ b/src/main/resources/filter/dev/application.properties
@@ -1,7 +1,7 @@
 #spring.application.name=qcdq_user_server
 #server.port=12100
 #eureka.client.serviceUrl.defaultZone=http://192.168.3.59:11100/eureka/
-eureka.instance.metadata-map.cluster=wx-mp-business
+#eureka.instance.metadata-map.cluster=wx-mp-business
 spring.aop.auto=true
 pic.url=http://www.test.com
 
@@ -14,23 +14,23 @@ spring.velocity.suffix=.vm
 spring.velocity.toolbox-config-location=/toolbox.xml
 #logging.level.org.apache.velocity=DEBUG
 #spring.velocity.properties.userdirective=com.quwb.web.config.velocity.CarConfigVelocity
-hystrix.command.default.execution.timeout.enabled=false
+#hystrix.command.default.execution.timeout.enabled=false
 #Hystrix\u652F\u6301\uFF0C\u5982\u679C\u4E3Atrue\uFF0Chystrix\u5E93\u5FC5\u987B\u5728classpath\u4E2D
-feign.hystrix.enabled=false
+#feign.hystrix.enabled=false
 
-feign.compression.response.enabled=true
-feign.compression.request.enabled=true
-feign.compression.request.mime-types=text/xml,application/xml,application/json
-feign.compression.request.min-request-size=2048
+#feign.compression.response.enabled=true
+#feign.compression.request.enabled=true
+#feign.compression.request.mime-types=text/xml,application/xml,application/json
+#feign.compression.request.min-request-size=2048
 
 logging.level.project.user.UserClient: DEBUG
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=2000
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=2000
 
 
 
 
 path.nfs=/usr/local/include
-feign.httpclient.enabled=true
+#feign.httpclient.enabled=true
 
 #redis配置
 #spring.redis.database=0
