--- a/src/main/resources/filter/dev/application.properties
+++ b/src/main/resources/filter/dev/application.properties
@@ -26,8 +26,10 @@ spring.velocity.toolbox-config-location=/toolbox.xml
 logging.level.project.user.UserClient: DEBUG
 #hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=2000
 
-
-
+#spring.datasource.url=jdbc:sqlserver://192.168.0.115:1433;DatabaseName=ShopHouse;
+#spring.datasource.username=sa
+#spring.datasource.password=qu90()op
+#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 path.nfs=/usr/local/include
 #feign.httpclient.enabled=true
